Added train and validation image generator

--- a/Data Exploration.ipynb
+++ b/Data Exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -45,13 +45,13 @@
     "   \n",
     "    \n",
     "    for line in t:\n",
-    "    \n",
+    "        \n",
     "        if line[\"Id\"] in whale_info:\n",
     "            whale_info[line[\"Id\"]] += 1\n",
     "        else:\n",
     "            whale_info[line[\"Id\"]] = 1\n",
     "\n",
-    "print(len(whale_info), len(onlyfiles))"
+    "print(len(whale_info), 25361)"
    ]
   },
   {
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -171,13 +171,13 @@
        "0.8244943022751469"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(train_images)/len(onlyfiles)"
+    "len(train_images)/25361"
    ]
   },
   {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
        "4451"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
        "5005"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,7 @@
        "       handle_unknown='error', n_values='auto', sparse=True)"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,6 +331,25 @@
    "source": [
     "encoder"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "pickle.dump(encoder_dict,open(\"class_dict.pkl\", \"wb\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle.dump(encoder, open(\"onehot.pkl\", 'wb'))"
+   ]
   }
  ],
  "metadata": {
@@ -349,7 +368,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
