--- a/Image Preprocessing.ipynb
+++ b/Image Preprocessing.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/sam/anaconda3/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n",
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "from keras.preprocessing.image import ImageDataGenerator\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
@@ -17,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +116,7 @@
        "4  0005c1ef8.jpg  new_whale"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +149,7 @@
     "    batch_size=20,\n",
     "    class_mode=\"categorical\"\n",
     ")\n",
-    "validation_generator = train_datagen.flow_from_dataframe(\n",
+    "validation_generator = test_datagen.flow_from_dataframe(\n",
     "    a,\n",
     "    y_col=\"Id\",\n",
     "    x_col = \"Image\",\n",
@@ -152,10 +162,113 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(20, 300, 300, 3) (20, 5005)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for data, labels in train_generator:\n",
+    "    print(data.shape, labels.shape)\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Baseline CNN Model\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras import layers\n",
+    "from keras import models\n",
+    "\n",
+    "model = models.Sequential()\n",
+    "model.add(layers.Conv2D(32, (3, 3), activation='relu', input_shape=(300, 300, 3)))\n",
+    "model.add(layers.MaxPooling2D((2, 2)))\n",
+    "model.add(layers.Conv2D(64, (3, 3), activation='relu'))\n",
+    "model.add(layers.MaxPooling2D((2, 2)))\n",
+    "model.add(layers.Conv2D(128, (3, 3), activation='relu'))\n",
+    "model.add(layers.MaxPooling2D((2, 2)))\n",
+    "model.add(layers.Conv2D(128, (3, 3), activation='relu'))\n",
+    "model.add(layers.MaxPooling2D((2, 2)))\n",
+    "model.add(layers.Flatten())\n",
+    "model.add(layers.Dense(5005, activation='sigmoid'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "conv2d_17 (Conv2D)           (None, 298, 298, 32)      896       \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_17 (MaxPooling (None, 149, 149, 32)      0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_18 (Conv2D)           (None, 147, 147, 64)      18496     \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_18 (MaxPooling (None, 73, 73, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_19 (Conv2D)           (None, 71, 71, 128)       73856     \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_19 (MaxPooling (None, 35, 35, 128)       0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_20 (Conv2D)           (None, 33, 33, 128)       147584    \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_20 (MaxPooling (None, 16, 16, 128)       0         \n",
+      "_________________________________________________________________\n",
+      "flatten_3 (Flatten)          (None, 32768)             0         \n",
+      "_________________________________________________________________\n",
+      "dense_4 (Dense)              (None, 5005)              164008845 \n",
+      "=================================================================\n",
+      "Total params: 164,249,677\n",
+      "Trainable params: 164,249,677\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras import optimizers\n",
+    "model.compile(loss='categorical_crossentropy', optimizer=optimizers.RMSprop(lr=1e-4), metrics=['acc'])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model.fit_generator()"
+   ]
   }
  ],
  "metadata": {
